<resources>
    <string name="app_name">Desafio1_AM200230_OC200384</string>
    <string name="btnEstudiante">Ejercicio 1 - Promedio de estudiante</string>
    <string name="btnEmpleado">Ejercicio 2 -Cálculo de salario neto</string>
    <string name="btnCalculadora">Ejercicio 3 - Calculadora</string>
    <string name="btnCalcularSalario">Calcular Salario base del empleado</string>
    <string name="LblTituloEjer1">Ejercicio 1</string>
    <string name="LblTituloEjer2">Ejercicio 2</string>
    <string name="LblTituloEjer3">Ejercicio 3</string>
    <string name="TxtResumenSalario">Detalle de Salario</string>
    <string name="TxtTituloSalarioBase">Salario Neto: </string>
    <string name="TxtTituloISSS">Descuento ISSS: </string>
    <string name="TxtTituloAFP">Descuento AFP: </string>
    <string name="TxtTituloRenta">Descuento Renta: </string>
    <string name="TxtNombreEmpleado">Empleado: </string>
</resources>