<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EmpleadoActivity">


    <TextView
        android:id="@+id/TxtTituloEjer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloEjer2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="25dp"/>

    <EditText
        android:id="@+id/LblNombreEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre del empleado" />

    <EditText
        android:id="@+id/LblSalarioBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Salario base" />

    <Button
        android:id="@+id/btnCalcularSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcularSalario" />

    <TextView
        android:id="@+id/TxtResumenSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtResumenSalario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/TxtTituloSalarioBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloSalarioBase"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/txtSalarioBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/TxtTituloISSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloISSS"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtISSS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/TxtTituloAFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloAFP"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtAFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/TxtTituloRenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloRenta"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtRenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"/>

</LinearLayout>
